<resources>
    <string name="app_name">格局</string>
    <string name="app_role">登录即代码您同意<u><font color="#ff0000">《格局软件使用服务协议》</font></u></string>
    <string name="record_choix">记住选择</string>
    <string name="record_psw">记住密码</string>
    <string name="forget_psw">忘记密码</string>
    <string name="login">登陆</string>
    <string name="check_update">检查更新</string>
    <string name="app_copyright_date">(C)2014-2016</string>
    <string name="dev_company_name">广州悦云信息科技有限公司</string>
    <string name="account">账号</string>
    <string name="about1">广州天越电子科技有限公司，是一家致力于通信网络建设综合管理平台和专业软件技术开发创新的企业。作为全球领先的通信网络建设信息化解决方案服务商，公司提供网络规划、设计仿真、工程管理、网络优化、网络维护解决方案和技术服务，促进通信网络建设整个生命周期的技术创新、流程改造，帮助全球通信运营商、设计院、厂家提高个人和企业的效能。</string>
    <string name="about2">天越人坚持：以最快的速度，第一时间满足用户的需求。</string>
    <string name="about3">客户服务：</string>
    <string name="about4">销售咨询：400–60–86855</string>
    <string name="about5">电话：020–85549595–801</string>
    <string name="about6">E-mail：support@tyicd.com</string>
    <string name="about7">传真：020–85549595–800</string>
    <string name="action_settings">设置</string>
    <string name="intro_text"></string>
    <string name="intro_ok">确定</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>
    <string name="preference_category_camera_effects">相机设置</string>
    <string name="preference_auto_stabilise">自动旋转</string>
    <string name="preference_auto_stabilise_summary">自动调整照片方向(可能导致内存较小的设备运行减慢)</string>
    <string name="preference_color_effect">效果</string>
    <string name="preference_color_effect_summary">选择一个颜色图层</string>
    <string name="preference_scene_mode">情景模式</string>
    <string name="preference_scene_mode_summary">选择一个情景模式</string>
    <string name="preference_white_balance">白平衡</string>
    <string name="preference_white_balance_summary">调整白平衡</string>
    <string name="preference_exposure">曝光/补偿</string>
    <string name="preference_exposure_summary">设置0为默认值</string>
    <string name="preference_face_detection">面部检测</string>
    <string name="preference_face_detection_summary">面部检测调焦</string>
    <string name="preference_category_camera_controls">摄像机控制</string>
    <string name="preference_timer">计时器</string>
    <string name="preference_timer_summary">设置计时器</string>
    <string name="preference_timer_beep">提示时间</string>
    <string name="preference_timer_beep_summary">计时器提示音</string>
    <string name="preference_burst_mode">突发模式</string>
    <string name="preference_burst_mode_summary">连拍</string>
    <string name="preference_burst_interval">连拍时间间隔</string>
    <string name="preference_burst_interval_summary">时间间隔</string>
    <string name="preference_screen_camera_controls_more">更多…</string>
    <string name="preference_pause_preview">拍照后暂停</string>
    <string name="preference_pause_preview_summary">拍照完成后是否暂停预览</string>
    <string name="preference_shutter_sound">快门提示音</string>
    <string name="preference_shutter_sound_summary">是否开启快门提示音 (需要 Android 4.2 或更高版本)</string>
    <string name="preference_volume_keys">音量键</string>
    <string name="preference_volume_keys_summary">设置音量键快捷动作</string>
    <string name="preference_screen_gui">屏幕界面…</string>
    <string name="preference_preview_size">预览界面大小</string>
    <string name="preference_preview_size_summary">如何选择预览图大小</string>
    <string name="preference_ui_placement">界面布局</string>
    <string name="preference_ui_placement_summary">是否需要一个 左手/右手 用户界面</string>
    <string name="preference_save_location">保存路径</string>
    <string name="preference_save_location_summary">设置文件保存文件夹名称(也可以设置一个完整路径)</string>
    <string name="preference_show_zoom">显示缩放量</string>
    <string name="preference_show_zoom_summary">在界面上显示当前的缩放量</string>
    <string name="preference_show_zoom_controls">显示缩放 -/+ 控制器</string>
    <string name="preference_show_zoom_controls_summary">是否显示缩放控制按钮</string>
    <string name="preference_free_memory">显示剩余存储空间容量</string>
    <string name="preference_free_memory_summary">在屏幕显示设备剩余的存储空间</string>
    <string name="preference_show_angle">显示角度</string>
    <string name="preference_show_angle_summary">显示当前设备的方向角度</string>
    <string name="preference_show_angle_line">显示线性角度</string>
    <string name="preference_show_angle_line_summary">显示水平线角度</string>
    <string name="preference_show_geo_direction">显示方向</string>
    <string name="preference_show_geo_direction_summary">显示指南针角度</string>
    <string name="preference_grid">显示网格</string>
    <string name="preference_grid_summary">显示拍照辅助网格</string>
    <string name="preference_thumbnail_animation">显示缩列图动画</string>
    <string name="preference_thumbnail_animation_summary">拍照时显示移动缩略图动画</string>
    <string name="preference_max_brightness">强制最大亮度</string>
    <string name="preference_max_brightness_summary">强制设置为最大亮度</string>
    <string name="preference_category_camera_quality">照片设置</string>
    <string name="preference_screen_camera_quality">照片设置</string>
    <string name="preference_resolution">分辨率</string>
    <string name="preference_resolution_summary">设置摄像机分辨率</string>
    <string name="preference_quality">照片质量</string>
    <string name="preference_quality_summary">设置照片质量(推荐90%%，内存RAM小于1G的设备推荐设置为60%%)</string>
    <string name="preference_location">存储位置信息</string>
    <string name="preference_location_summary">是否保存GPS信息到照片</string>
    <string name="video_quality">视频分辨率</string>
    <string name="video_quality_summary">设置视频分辨率</string>
    <string name="preference_force_video_4k">强制 4K UHD 视频 (测试)</string>
    <string name="preference_force_video_4k_summary">设置后置摄像机录制 3840x2160 分辨率的视频 - 需要你的设备支持该分辨率, 如果你的设备不支持该功能，有可能会导致程序奔溃!</string>
    <string name="preference_record_audio">音频</string>
    <string name="preference_record_audio_summary">录制视频时是否也收录声音</string>
    <string name="preference_record_audio_src">音频采集来源</string>
    <string name="preference_record_audio_src_summary">麦克风采集音频</string>
    <string name="preference_category_online">其他</string>
    <string name="preference_online_help">帮助</string>
    <string name="preference_donate">-</string>
    <string name="preference_donate_summary">-</string>
    <string name="preference_about">关于</string>
    <string name="preference_about_summary">-</string>
    <string name="about_ok">确定</string>
    <string name="about_available">有效</string>
    <string name="about_not_available">无效</string>
    <string name="about_copy_to_clipboard">复制到剪贴板</string>
    <string name="take_photo">拍照</string>
    <string name="gallery">效果</string>
    <string name="exposure">曝光</string>
    <string name="focus_mode">对焦</string>
    <string name="flash_mode">闪光灯</string>
    <string name="switch_camera">切换摄像头</string>
    <string name="switch_video">切换模式</string>
    <string name="trash">删除</string>
    <string name="share">分享</string>
    <string name="title_activity_shop">ShopActivity</string>
    <string name="title_activity_product_detile">ProductDetileActivity</string>
    <string name="title_activity_shop_cart">ShopCartActivity</string>
    <string name="title_activity_ensure_order">EnsureOrderActivity</string>
    <string name="title_activity_help_take_ok_detile">HelpTakeOkDetileActivity</string>
    <string name="title_activity_son_trace">SonTraceActivity</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住 说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">照片</string>
    <string name="attach_take_pic">拍摄</string>
    <string name="attach_location">位置</string>
    <string name="attach_video">视频</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音通话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="user_card">Business card</string>
    <string name="move_up_to_cancel">手指上滑,取消发送</string>
    <string name="release_to_cancel">手指上滑,取消发送</string>
    <string name="send_fail">发送失败</string>
    <string name="delete_message">删除消息</string>
    <string name="delete_conversation_messages">删除对话和消息</string>
    <string name="delete_conversation">删除对话</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除声音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该消息？</string>
    <string name="connect_failuer_toast">请检查你的网络或者重发</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录</string>
    <string name="location_recv">[%1$s 的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">视频录制</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">搜索</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="em_user_remove">此用户已被移除</string>
    <string name="user_forbidden">用户被服务器限制连接</string>
    <string name="set">设置</string>
    <string name="notify">新消息提醒</string>
    <string name="newnotify">接收新消息通知</string>
    <string name="voice">声音</string>
    <string name="shake">震动</string>
    <string name="chatset">聊天设置</string>
    <string name="yangshengqi">使用扬声器播放语音</string>
    <string name="push_settings">消息推送设置</string>
    <string name="book_black">通讯录黑名单</string>
    <string name="set_custom_appkey">自定义App key</string>
    <string name="set_custom_server">自定义server</string>
    <string name="session">会话</string>
    <string name="address_book">通讯录</string>
    <string name="setting">设置</string>
    <string name="now_refresh_list">正在加载数据</string>
    <string name="Application_and_notify">申请与通知</string>
    <string name="save_new_nickname">保存</string>
    <string name="nickname_description">设置此昵称以后，在与iOS客户端demo聊天过程中，iOS一侧会显示此昵称而不是环信ID，如果对方使用安卓客户端则此设置不生效</string>
    <string name="group_chat">群聊</string>
    <string name="chat_room">聊天室</string>
    <string name="add_friend">添加好友</string>
    <string name="search">搜索</string>
    <string name="black_item">黑名单</string>
    <string name="diagnose">诊断</string>
    <string name="push_nick">iOS离线推送昵称</string>
    <string name="call_option">通话设置</string>
    <string name="Current_version">当前版本</string>
    <string name="Not_Set">未设置</string>
    <string name="mute">静音</string>
    <string name="hang_up">挂断</string>
    <string name="capture_image">抓取图片</string>
</resources>