<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".TYCameraActivity" >

    <FrameLayout
        android:id="@+id/preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        />
    
    
    
    <ZoomControls
        android:id="@+id/zoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        />


    
    <ImageButton
        android:id="@+id/settings"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/action_settings"
        android:src="@drawable/settings"
        android:onClick="clickedSettings"
        />



    <ImageButton
        android:id="@+id/focus_mode"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/focus_mode"
        android:onClick="clickedFocusMode"
        />

    <ImageButton
        android:id="@+id/flash"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/flash_mode"
        android:onClick="clickedFlash"
        />

  

    <ZoomControls
        android:id="@+id/seekbar_zoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        />

    <ImageView 
        android:id="@+id/task_photo_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone"
        />
    
    <ImageButton
        android:id="@+id/take_photo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/take_photo"
        android:background="@drawable/take_photo"
        android:onClick="clickedTakePhoto"
        android:layout_centerVertical="true"
        />
    
    <ImageButton 
        android:id="@+id/btn_take_photo_ok"
        android:background="@drawable/ok"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_margin="5dp"
        android:onClick="onMakeSureTakePhotoResult"
        />

    <ImageButton 
        android:id="@+id/btn_take_photo_cancel"
        android:background="@drawable/cancel"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:onClick="onCancelTaskPhoto"
        />
    
    <ImageView 
	    android:id="@+id/take_photo_guide"
	    android:src="@drawable/take_photo_guide"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:visibility="visible"
	    />

</RelativeLayout>
