<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true" >

    <com.hyphenate.media.EMOppositeSurfaceView
        android:id="@+id/opposite_surface"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:id="@+id/ll_btns"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <LinearLayout
            android:id="@+id/ll_top_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <!--<TextView-->
                <!--android:id="@+id/tv_call_state"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:paddingLeft="12dp"-->
                <!--android:paddingRight="12dp"-->
                <!--android:textColor="@color/voip_interface_text_color"-->
                <!--android:textSize="22sp"-->
                <!--android:visibility="visible" />-->

            <!--<app.loggic.call.wedget.MyChronometer-->
                <!--android:id="@+id/chronometer"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="Chronometer"-->
                <!--android:textColor="#fff"-->
                <!--android:visibility="invisible"-->
                <!--tools:ignore="HardcodedText" />-->

            <!--<TextView-->
                <!--android:id="@+id/tv_is_p2p"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:textColor="#fff" />-->

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/swing_card"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerInParent="true"
                android:scaleType="centerCrop"
                fresco:roundedCornerRadius="10dp"
                fresco:placeholderImage="@drawable/default_user_icon"/>

            <TextView
                android:id="@+id/tv_nick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text=""
                android:textColor="@android:color/white"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/tv_call_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:visibility="visible" />
        </LinearLayout>

           <!-- 演示视频录制功能 -->
        <Button 
            android:id="@+id/btn_record_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recording_video"
            android:layout_below="@id/ll_top_container"
            android:visibility="gone" />
        
        <Button
            android:visibility="gone"
            android:id="@+id/btn_switch_camera1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_camera"
            android:layout_below="@id/btn_record_video" />

        <Button
            android:visibility="gone"
            android:id="@+id/btn_capture_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capture_image"
            android:layout_below="@id/btn_switch_camera1" />

        <SeekBar
            android:visibility="gone"
            android:id="@+id/seekbar_y_detal"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_capture_image"
            android:max="200"
            android:progress="100"
            />
        <!--     <Button 
            android:layout_marginTop="3dp"
            android:id="@+id/btn_toggle_video_stream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="暂停视频"
            android:layout_below="@id/btn_record_video"
            /> -->
        
        <TextView
            android:visibility="gone"
            android:id="@+id/tv_call_monitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/local_surface"
            android:layout_alignParentRight="true"
            android:textColor="#afff"
            android:textSize="12sp"
            android:layout_marginBottom="6dp" />

        <com.hyphenate.media.EMLocalSurfaceView
            android:id="@+id/local_surface"
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:layout_alignParentRight="true" />

        <LinearLayout
            android:id="@+id/ll_surface_baseline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:paddingTop="8dp" >

            <View
                android:layout_width="match_parent"
                android:layout_height="1px" />

            <LinearLayout
                android:id="@+id/ll_bottom_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="18dp" >

                <app.loggic.call.wedget.MyChronometer
                    android:id="@+id/chronometer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Chronometer"
                    android:textColor="#fff"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/tv_is_p2p"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff" />

                <LinearLayout
                    android:id="@+id/ll_voice_control"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="DisableBaselineAlignment">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <ImageView
                            android:id="@+id/iv_mute"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:scaleType="fitCenter"
                            android:src="@drawable/btn_mute_n" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:gravity="center"
                            android:text="@string/mute"
                            android:textColor="@android:color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <ImageView
                            android:id="@+id/btn_hangup_call"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:scaleType="fitCenter"
                            android:src="@drawable/btn_refuse" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:gravity="center"
                            android:text="@string/hang_up"
                            android:textColor="@android:color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <ImageView
                            android:id="@+id/btn_switch_camera"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:scaleType="fitCenter"
                            android:src="@drawable/btn_camera_n" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:gravity="center"
                            android:text="@string/switch_camera"
                            android:textColor="@android:color/white" />
                    </LinearLayout>

                    <!--<LinearLayout-->
                        <!--android:layout_width="0dp"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_weight="1"-->
                        <!--android:gravity="center"-->
                        <!--android:orientation="vertical" >-->

                        <!--<ImageView-->
                            <!--android:id="@+id/iv_handsfree"-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:scaleType="fitCenter"-->
                            <!--android:src="@drawable/btn_free_n" />-->

                        <!--<TextView-->
                            <!--android:layout_width="fill_parent"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:layout_marginTop="3dp"-->
                            <!--android:gravity="center"-->
                            <!--android:text="@string/Hands_free"-->
                            <!--android:textColor="@android:color/white" />-->
                    <!--</LinearLayout>-->
                </LinearLayout>

                <FrameLayout
                    android:id="@+id/ll_coming_call"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp" >
                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <!--<Button-->
                            <!--android:id="@+id/btn_refuse_call"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="55dp"-->
                            <!--android:layout_weight="1"-->
                            <!--android:background="@drawable/em_call_hangup_bg"-->
                            <!--android:gravity="center"-->
                            <!--android:text="@string/hang_up"-->
                            <!--android:textColor="@android:color/white"-->
                            <!--android:textSize="20sp" />-->

                        <!--<Button-->
                            <!--android:id="@+id/btn_answer_call"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="55dp"-->
                            <!--android:layout_marginLeft="30dp"-->
                            <!--android:layout_weight="1"-->
                            <!--android:background="@drawable/em_call_answer_bg"-->
                            <!--android:gravity="center"-->
                            <!--android:text="@string/answer"-->
                            <!--android:textColor="@android:color/white"-->
                            <!--android:textSize="20sp" />-->

                        <TextView
                            android:id="@+id/btn_refuse_call"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            android:text="拒绝"
                            android:gravity="center"
                            android:drawablePadding="5dp"
                            android:drawableTop="@drawable/btn_refuse"/>
                        <TextView
                            android:id="@+id/btn_answer_call"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            android:gravity="center"
                            android:text="接听"
                            android:drawablePadding="5dp"
                            android:drawableTop="@drawable/btn_answer"/>
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:text=""
        android:id="@+id/tv_network_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        android:layout_centerInParent="true"/>

    <!--<Button-->
        <!--android:visibility="invisible"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:id="@+id/btn_hangup_call"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="67dp"-->
        <!--android:background="@drawable/em_call_hangup_bg"-->
        <!--android:gravity="center"-->
        <!--android:text="@string/hang_up"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:textSize="20sp" />-->

</RelativeLayout>